# musikbox

./: README.md  musikbox.service  pyproject.toml
src/musikbox/: audio.py  cli.py  config.py  library.py  player.py  rfid.py  statemachine.py
tests/: test_audio.py  test_config.py  test_library.py  test_player.py  test_rfid.py  test_statemachine.py
